--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <meta charset="UTF-8">
   <head>
+    <title>
+      MotionStore
+    </title>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <style>
